<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_layout"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/reserve_day_of_week_default"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >
		<TextView
            android:id="@+id/tv_agency_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:text="@string/value_order_product_agency_name"
            android:textColor="#505666"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tv_location"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:text="@string/value_order_product_location"
            android:textColor="#505666"
            android:textSize="20sp" />

        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_model_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:text="@string/value_order_product_model_name"
            android:textColor="#505666"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_gas_type"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:text="@string/value_order_product_gas_type"
            android:textColor="#505666"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_order_seq"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/edit_text_background"
            android:gravity="center"
            android:text="@string/value_order_product_order_count"
            android:textColor="#505666"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>