<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_layout"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:background="@color/reserve_day_of_week_default" >

    <TextView
        android:id="@+id/tv_wms_activity_03_location"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:background="@color/text_view_header_row_one"
        android:gravity="center"
        android:text="@string/title_release_location"
        android:fontFamily="@font/nanum_gothic_bold"
        android:textSize="25dp"
        android:textColor="#3d3c49"/>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_wms_activity_03_model_name"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@color/text_view_header_row_one"
            android:text="@string/value_order_product_model_name"
            android:fontFamily="@font/nanum_gothic_bold"
            android:textSize="15dp"
            android:textColor="#3d3c49" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tv_wms_activity_03_gas_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/text_view_header_row_two"
                android:text="@string/value_order_product_gas_type"
                android:textSize="15dp"
                android:textColor="#706d96"
                android:fontFamily="@font/nanum_gothic_bold"/>

            <TextView
                android:id="@+id/tv_wms_activity_03_make"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/text_view_header_row_one"
                android:text="@string/value_cell_make"
                android:textSize="15dp"
                android:textColor="#706d96"
                android:fontFamily="@font/nanum_gothic_bold" />
            <TextView
                android:id="@+id/tv_wms_activity_03_order_seq"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:background="@color/text_view_header_row_two"
                android:text="@string/value_order_product_order_count"
                android:textSize="15dp"
                android:textColor="#706d96"
                android:fontFamily="@font/nanum_gothic_bold" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>