<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_layout"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal" >


            <TextView
                android:id="@+id/tv_model_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@color/text_view_listview_row_one"
                android:fontFamily="@font/nanum_gothic_extra_bold"
                android:gravity="center_vertical"
                android:text="@string/value_order_product_model_name"
                android:textSize="15.3sp"
                android:textColor="#615ca9"
                android:lineSpacingExtra="-10.3sp"
                android:paddingLeft="11.7dp"/>
            <TextView
                android:id="@+id/tv_model_gas_type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/text_view_listview_row_two"
                android:fontFamily="@font/nanum_gothic_extra_bold"
                android:text="@string/value_order_product_gas_type"
                android:textSize="15.3sp"
                android:textColor="#858398"
                android:lineSpacingExtra="-10.3sp"
                android:gravity="center" />
            <TextView
                android:id="@+id/tv_cell_make"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/text_view_listview_row_one"
                android:fontFamily="@font/nanum_gothic_extra_bold"
                android:text="@string/value_cell_make"
                android:textSize="15.3sp"
                android:textColor="#615ca9"
                android:lineSpacingExtra="-10.3sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/tv_order_seq"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/text_view_listview_row_two"
                android:fontFamily="@font/nanum_gothic_extra_bold"
                android:text="@string/value_order_product_order_count"
                android:textSize="15.3sp"
                android:textColor="#858398"
                android:lineSpacingExtra="-10.3sp"
                android:gravity="center" />

        </LinearLayout>

</LinearLayout>