<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="33.7dp"
    android:layout_marginRight="34.3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:id="@+id/ll_01"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <kr.co.rinnai.dms.common.custom.CustomMenuButtonView
                android:id="@+id/menu_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:pressSymbol="@drawable/menu_04_01_press"
                app:symbol="@drawable/menu_04_01"
                app:text="@string/employee_01_activity_title"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <kr.co.rinnai.dms.common.custom.CustomMenuButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/menu_02"
                app:symbol="@drawable/menu_04_02"
                app:pressSymbol="@drawable/menu_04_02_press"
                app:text="@string/employee_02_activity_title"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"

        android:id="@+id/ll_02"
        android:layout_below="@+id/ll_01"
        android:layout_marginTop="9.7dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <kr.co.rinnai.dms.common.custom.CustomMenuButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:id="@+id/menu_05"
                app:symbol="@drawable/menu_04_05"
                app:pressSymbol="@drawable/menu_04_05_press"
                app:text="@string/employee_05_activity_title"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <kr.co.rinnai.dms.common.custom.CustomMenuButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:id="@+id/menu_07"
                app:symbol="@drawable/menu_03_normal"
                app:pressSymbol="@drawable/menu_03_press"
                app:text="@string/employee_06_activity_title"
                android:visibility="visible"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:id="@+id/ll_03"
        android:layout_below="@+id/ll_02"
        android:layout_marginTop="9.7dp"
        android:layout_centerHorizontal="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <kr.co.rinnai.dms.common.custom.CustomMenuButtonView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:id="@+id/menu_03"
                app:symbol="@drawable/menu_04_03"
                app:pressSymbol="@drawable/menu_04_03_press"
                app:text="@string/employee_03_activity_title"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <kr.co.rinnai.dms.common.custom.CustomMenuButtonView
                android:id="@+id/menu_08"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:pressSymbol="@drawable/menu_04_01_press"
                app:symbol="@drawable/menu_04_01"
                app:text="@string/employee_08_activity_title"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>